

____________________________________________________________________________________________________
BUG x.x unreleased

CHANGES

New Features:

Improvements:

- Production Queue
	Items that have hammers invested already are drawn in cyan
- Great Person Tech Prefs
	Added headings and limited Current and Future techs to those that can be researched

Bug Fixes:

MODDING

New Features:

- BugUtil
	Added export(), exportFunction(), extend(), and extendFunction() for injecting functions into EntryPoint modules
- Configuration
	Added <export> and <extend> XML elements that call exportFunction() and extendFunction() respectively

Improvements:

- Removed Unused Modules
	CvAppInterface and CvOptionsScreenCallbackInterface
	If your mod needs to add code to any of these modules, use <export> and <extend> or use the original BTS modules as a base

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.3 released February 16th, 2010

CHANGES

New Features:

- Main Interface
	Can choose from three sizes for the build/action buttons
	Added a button to bring up the BUG Options Screen (top left)
- Espionage Advisor
	New layout shows EPs spent against you and icons for passive missions
	Can swap cities and missions lists to see cost in each city for a single mission
	New GLANCE-style tab shows EPs spending on and by each rival you've met
- Technology Chooser
	Added color-coded shadow denoting each technology's era
- BUFFY
	Barbarian Uprising events require Priesthood

Improvements:

- Main Interface
	Unit Plot drawing improvements (pre-work only at the moment)
- Great Person Bar
	Added city's total GP/Turn to hover.
- City Screen
	Can select which tiles to count in Raw Yields when Civ starts
- Foreign Advisor
	Can select how to display attitudes: numbers, smilies, or both
	Shows technologies that you cannot trade to rivals
- Technology Chooser
	Added hover to GP Research icons showing the preferred order