@@ -44,7 +44,10 @@ Improvements:
 
 Bug Fixes:
 
+
 MODDING
+
+	*** Important: See "Removed EntryPoints Modules" below *** 
 
 New Features:
 
@@ -55,8 +58,8 @@ New Features:
 
 Improvements:
 
-- Removed Unused Modules
-	CvAppInterface and CvOptionsScreenCallbackInterface
+- Removed EntryPoints Modules
+	CvAppInterface, CvDiplomacyInterface, and CvOptionsScreenCallbackInterface
 	If your mod needs to add code to any of these modules, use <export> and <extend> or use the original BTS modules as a base
 
 Bug Fixes:
